--- a/index.html
+++ b/index.html
@@ -24,6 +24,17 @@
         </nav>
     </header>
     <main class="main">
+        <section class="banner">
+            <div class="banner-content">
+                <h2 class="banner-title"><span class="text-primary">Empowering</span><br>
+                    students from small<br> age <span class="text-secondary">towards vision</span></h2>
+                <p class="banner-description">With the courage, Confidence, Creativity and Compassion to make<br> their Unique Contribution in a Diverse and Dynamic World.</p>
+                <button class="btn-primary">Enroll Now</button>
+            </div>
+            <div class="banner-img">
+                <img src="assets/hero-kids.png" alt="" class="img-fluid">
+            </div>
+        </section>
     </main>
     <footer class="footer">
 
