Curriculum section responsive complete

--- a/index.html
+++ b/index.html
@@ -35,6 +35,33 @@
                 <img src="assets/hero-kids.png" alt="" class="img-fluid">
             </div>
         </section>
+        <section class="curriculum section-padding">
+            <h3 class="section-title">Standard Curriculum</h3>
+            <div class="curriculum-cards">
+                <div class="curriculum-card blue-card">
+                    <img src="assets/kinder.png" alt="">
+                    <h4 class="curriculum-card-title">Kinder (3-6) Years</h4>
+                    <p class="curriculum-card-description">Nurture your child's natural curiosity and foster a lifelong love of learning through play-based exploration and discovery.</p>
+                    <button class="curriculum-card-btn text-secondary">Read More</button>
+                </div>
+                <div class="curriculum-card orange-card">
+                    <img src="assets/elementary.png" alt="">
+                    <h4 class="curriculum-card-title">Elementary School</h4>
+                    <p class="curriculum-card-description">Empower your child to excel academically and develop strong character through a balanced curriculum and engaging learning experiences.</p>
+                    <button class="curriculum-card-btn text-primary">Read More</button>
+                </div>
+                <div class="curriculum-card purple-card">
+                    <img src="assets/middle.png" alt="">
+                    <h4 class="curriculum-card-title">Middle (10-16) Years</h4>
+                    <p class="curriculum-card-description">Guide your teen's transition to young adulthood with a challenging and supportive academic environment that fosters critical thinking and personal growth.</p>
+                    <button class="curriculum-card-btn text-quaternary">Read More</button>
+                </div>
+            </div>
+            <div class="curriculum-nav-btns">
+                <button class="btn-secondary curriculum-nav-btn"><img src="assets/chevron-left-solid.svg" alt=""></button>
+                <button class="btn-secondary curriculum-nav-btn"><img src="assets/chevron-right-solid.svg" alt=""></button>
+            </div>
+        </section>
     </main>
     <footer class="footer">
 
