Basic Footer structure added

--- a/index.html
+++ b/index.html
@@ -64,7 +64,29 @@
         </section>
     </main>
     <footer class="footer">
-
+        <div class="footer-content">
+            <div class="logo-container">
+                <img src="assets/logo.png" alt="" class="footer-logo">
+                <h3 class="footer-title">Kids<br>Education</h3>
+            </div>
+            <p class="footer-description">Nurturing young minds through engaging experiences that foster curiosity and growth.Building a strong foundation for future learning and success.</p>
+        </div>
+        <div class="footer-nav">
+            <h4 class="footer-nav-title">About School</h4>
+            <ul class="footer-nav-links">
+                <li class="footer-nav-link">Home</li>
+                <li class="footer-nav-link">About</li>
+                <li class="footer-nav-link">Facilities</li>
+                <li class="footer-nav-link">Admission</li>
+            </ul>
+        </div>
+        <div class="footer-icons-content">
+            <h4 class="footer-icons-title">Keep In Touch</h4>
+            <img src="assets/fb.png" alt="" class="footer-icons">
+            <img src="assets/dribble.png" alt="" class="footer-icons">
+            <img src="assets/twitter.png" alt="" class="footer-icons">
+            <img src="assets/google+.png" alt="" class="footer-icons">
+        </div>
     </footer>
 </body>
 </html>
