Footer for large screen complete

--- a/index.html
+++ b/index.html
@@ -81,11 +81,13 @@
             </ul>
         </div>
         <div class="footer-icons-content">
-            <h4 class="footer-icons-title">Keep In Touch</h4>
-            <img src="assets/fb.png" alt="" class="footer-icons">
-            <img src="assets/dribble.png" alt="" class="footer-icons">
-            <img src="assets/twitter.png" alt="" class="footer-icons">
-            <img src="assets/google+.png" alt="" class="footer-icons">
+            <h4 class="footer-nav-title">Keep In Touch</h4>
+            <div class="footer-icons">
+                <img src="assets/fb.png" alt="" class="footer-icon">
+                <img src="assets/dribble.png" alt="" class="footer-icon">
+                <img src="assets/twitter.png" alt="" class="footer-icon">
+                <img src="assets/google+.png" alt="" class="footer-icon">
+            </div>
         </div>
     </footer>
 </body>
