--- a/index.html
+++ b/index.html
@@ -62,6 +62,73 @@
                 <button class="btn-secondary curriculum-nav-btn"><img src="assets/chevron-right-solid.svg" alt=""></button>
             </div>
         </section>
+        <section class="stories">
+            <h3 class="section-title story-title">Our Stories</h3>
+            <div class="story-cards-container">
+                <div id="story-card-1">
+                    <img src="assets/story-1.png" alt="" class="story-card-img">
+                    <div class="card-1-content">
+                        <div class="story-date capsule-sky">November 19, 2019</div>
+                        <h4 class="story-card-title">A fun toddler coloring training on
+                            classroom</h4>
+                        <p class="story-card-description">Beautiful branding for changes by Never Now in Australia.
+                            changes is a platform for open discussion in an inclusive and
+                            collaborative environment, providing the...</p>
+                    </div>
+                </div>
+                <div class="story-cards">
+                    <div class="story-card">
+                        <img src="assets/story-2.png" alt="" class="story-card-img">
+                        <div class="story-card-content">
+                            <div class="story-date capsule-green">November 19, 2019</div>
+                            <h4 class="story-card-title">Find out if a school fits the
+                                family’s needs</h4>
+                        </div>
+                    </div>
+                    <div class="story-card">
+                        <img src="assets/story-3.png" alt="" class="story-card-img">
+                        <div class="story-card-content">
+                            <div class="story-date capsule-blue">November 19, 2019</div>
+                            <h4 class="story-card-title">Summer math & literacy
+                            centres for kids</h4>
+                        </div>
+                    </div>
+                    <div class="story-card display-none display-block">
+                        <img src="assets/story-4.png" alt="" class="story-card-img">
+                        <div class="story-card-content">
+                            <div class="story-date capsule-blue">November 19, 2019</div>
+                            <h4 class="story-card-title">Classroom management
+                            techniques for new tutors</h4>
+                        </div>
+                    </div>
+                    <div class="story-card display-none display-block">
+                        <img src="assets/story-4.png" alt="" class="story-card-img">
+                        <div class="story-card-content">
+                            <div class="story-date capsule-green">November 19, 2019</div>
+                            <h4 class="story-card-title">Classroom management
+                            techniques for new tutors</h4>
+                        </div>
+                    </div>
+                    <div class="story-card">
+                        <img src="assets/story-5.png" alt="" class="story-card-img">
+                        <div class="story-card-content">
+                            <div class="story-date capsule-green">July 19, 2019</div>
+                            <h4 class="story-card-title">Conversation rhymes
+                            improve kids listening</h4>
+                        </div>
+                    </div>
+                    <div class="story-card">
+                        <img src="assets/story-3.png" alt="" class="story-card-img">
+                        <div class="story-card-content">
+                            <div class="story-date capsule-sky">September 10, 2019</div>
+                            <h4 class="story-card-title">Summer math & literacy
+                            centres for kids</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <button class="btn-primary view-btn">View All</button>
+        </section>
     </main>
     <footer class="footer">
         <div class="footer-content">
