Marquee tag added

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         </nav>
     </header>
     <main class="main">
+        <marquee behavior="" direction="left" class="marq" loop="infinite">School is a simple website for little kids who needs some guidance for their studies.</marquee>
         <section class="banner">
             <div class="banner-content">
                 <h2 class="banner-title"><span class="text-primary">Empowering</span><br>
