Padding and margin adjusted in curriculum section

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
         </section>
         <section class="curriculum section-padding">
-            <h3 class="section-title">Standard Curriculum</h3>
+            <h3 class="section-title curriculum-title">Standard Curriculum</h3>
             <div class="curriculum-cards">
                 <div class="curriculum-card blue-card">
                     <img src="assets/kinder.png" alt="">
